--- a/codes/1_super_basic.ipynb
+++ b/codes/1_super_basic.ipynb
@@ -165,16 +165,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "08f06295",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mse = MeanSquaredError()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
    "id": "b4d01667",
    "metadata": {},
    "outputs": [],
@@ -195,7 +185,7 @@
     "    \n",
     "    optimizer = Adam(learning_rate=CONFIGS['learning_rate'])\n",
     "    model.compile(\n",
-    "        loss = mse,\n",
+    "        loss = MeanSquaredError(),\n",
     "        optimizer = optimizer,\n",
     "    )\n",
     "    \n",
@@ -207,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "a446abff",
    "metadata": {
     "scrolled": true
@@ -242,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "f120102c",
    "metadata": {},
    "outputs": [],
@@ -278,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "8179dd95",
    "metadata": {
     "scrolled": true
@@ -289,35 +279,51 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/100\n",
-      "29/29 [==============================] - 1s 5ms/step - loss: 73326104.0000 - val_loss: 29656152.0000\n",
+      "29/29 [==============================] - 1s 5ms/step - loss: 29171228.0000 - val_loss: 2767708.2500\n",
       "Epoch 2/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 14798467.0000 - val_loss: 4228784.0000\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 529744.9375 - val_loss: 99979.0703\n",
       "Epoch 3/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 1994319.7500 - val_loss: 488892.9062\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 44502.1953 - val_loss: 21834.5625\n",
       "Epoch 4/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 196021.2500 - val_loss: 29830.4297\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 10805.7334 - val_loss: 20649.0137\n",
       "Epoch 5/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 17347.6445 - val_loss: 10966.3320\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 10354.5117 - val_loss: 20345.8496\n",
       "Epoch 6/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 8371.7090 - val_loss: 15605.4854\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 10248.9678 - val_loss: 21853.8438\n",
       "Epoch 7/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 7508.0249 - val_loss: 16568.9609\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 10241.2285 - val_loss: 22073.1680\n",
       "Epoch 8/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 7443.3921 - val_loss: 16937.6895\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 10230.7256 - val_loss: 21134.9453\n",
       "Epoch 9/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 7440.6514 - val_loss: 16730.9688\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 10218.5537 - val_loss: 20939.6914\n",
       "Epoch 10/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 7454.7314 - val_loss: 16449.9824\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 10228.7090 - val_loss: 19790.1543\n",
       "Epoch 11/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 7445.5513 - val_loss: 17131.4043\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 10223.0098 - val_loss: 21153.4766\n",
       "Epoch 12/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 7446.9028 - val_loss: 16464.5801\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 10214.4053 - val_loss: 18075.7363\n",
       "Epoch 13/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 7443.0356 - val_loss: 17236.3359\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 10290.8223 - val_loss: 17620.7832\n",
       "Epoch 14/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 7442.4678 - val_loss: 17346.7363\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 10234.0977 - val_loss: 19084.3828\n",
       "Epoch 15/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 7443.0957 - val_loss: 17025.2051\n"
+      "29/29 [==============================] - 0s 2ms/step - loss: 10229.2598 - val_loss: 21611.3438\n",
+      "Epoch 16/100\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 10208.3818 - val_loss: 22781.2500\n",
+      "Epoch 17/100\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 10217.0498 - val_loss: 21764.4785\n",
+      "Epoch 18/100\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 10208.7510 - val_loss: 23027.1270\n",
+      "Epoch 19/100\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 10224.2930 - val_loss: 21797.2617\n",
+      "Epoch 20/100\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 10264.1152 - val_loss: 19810.0078\n",
+      "Epoch 21/100\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 10199.9482 - val_loss: 20021.9043\n",
+      "Epoch 22/100\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 10202.5488 - val_loss: 20071.9180\n",
+      "Epoch 23/100\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 10180.3438 - val_loss: 19211.3301\n"
      ]
     }
    ],
@@ -327,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "bec53ea7",
    "metadata": {},
    "outputs": [],
@@ -338,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "e87104d7",
    "metadata": {},
    "outputs": [],
@@ -354,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "2e94d02c",
    "metadata": {},
    "outputs": [
@@ -362,16 +368,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train_loss: 9796.9130859375\n",
-      "valid_loss: 10966.33203125\n",
-      "test_loss: 14396.3349609375\n"
+      "train_loss: 10422.763671875\n",
+      "valid_loss: 17620.783203125\n",
+      "test_loss: 21256.591796875\n"
      ]
     }
    ],
    "source": [
-    "train_loss = mse(y_train, y_train_pred).numpy()\n",
-    "valid_loss = mse(y_valid, y_valid_pred).numpy()\n",
-    "test_loss = mse(y_test, y_test_pred).numpy()\n",
+    "train_loss = best_model.evaluate(X_train, y_train, verbose=0)\n",
+    "valid_loss = best_model.evaluate(X_valid, y_valid, verbose=0)\n",
+    "test_loss = best_model.evaluate(X_test, y_test, verbose=0)\n",
     "\n",
     "print(f'train_loss: {train_loss}')\n",
     "print(f'valid_loss: {valid_loss}')\n",
