--- a/codes/2_tf_dataset.ipynb
+++ b/codes/2_tf_dataset.ipynb
@@ -68,7 +68,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "data.shape: (2040, 1)\n"
+      "data.shape: (2040, 2)\n"
      ]
     }
    ],
@@ -80,7 +80,7 @@
     "    'humid', 'rain', 'sun', 'non_elec_eq', 'sunlight_eq'\n",
     "]\n",
     "\n",
-    "data = data.loc[data['num'] == 1, ['target']]\n",
+    "data = data.loc[data['num'] == 1, ['date_time', 'target']]\n",
     "\n",
     "print(f'data.shape: {data.shape}')"
    ]
@@ -100,25 +100,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "c2c40b63",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def mk_dataset(data, shuffle=False):\n",
-    "    ds = Dataset.from_tensor_slices(data)\n",
-    "    ds = ds.window(CONFIGS['window_size']+CONFIGS['target_length'], shift=1, drop_remainder=True)\n",
-    "    ds = ds.flat_map(lambda x: x)\n",
-    "    ds = ds.batch(CONFIGS['window_size']+CONFIGS['target_length'])\n",
-    "    if shuffle:\n",
-    "        ds = ds.shuffle(512)\n",
-    "    ds = ds.map(lambda x: (x[:CONFIGS['window_size']], x[CONFIGS['window_size']:]))\n",
-    "    ds = ds.batch(CONFIGS['batch_size']).cache().prefetch(2)\n",
-    "    return ds"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
    "id": "e239b5a3",
    "metadata": {},
    "outputs": [],
@@ -146,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "832d0773",
    "metadata": {},
    "outputs": [],
@@ -158,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "061bdf14",
    "metadata": {},
    "outputs": [],
@@ -191,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "5f7f330d",
    "metadata": {},
    "outputs": [
@@ -224,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "a89ab345",
    "metadata": {},
    "outputs": [],
@@ -257,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "456b660b",
    "metadata": {},
    "outputs": [
@@ -266,39 +247,39 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/100\n",
-      "29/29 [==============================] - 1s 6ms/step - loss: 109988384.0000 - val_loss: 51600060.0000\n",
+      "29/29 [==============================] - 1s 6ms/step - loss: 53111208.0000 - val_loss: 30510230.0000\n",
       "Epoch 2/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 33828000.0000 - val_loss: 19697826.0000\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 20358592.0000 - val_loss: 10402436.0000\n",
       "Epoch 3/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 12893697.0000 - val_loss: 6490151.5000\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 6040045.0000 - val_loss: 1896179.1250\n",
       "Epoch 4/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 3990121.5000 - val_loss: 1578040.7500\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 719989.3125 - val_loss: 18211.7754\n",
       "Epoch 5/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 929164.1250 - val_loss: 229533.7812\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 14112.1777 - val_loss: 27216.6816\n",
       "Epoch 6/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 148754.9531 - val_loss: 12425.9482\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 9303.0381 - val_loss: 15117.3232\n",
       "Epoch 7/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 19455.6270 - val_loss: 6690.4688\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 7662.9302 - val_loss: 13330.0322\n",
       "Epoch 8/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 6950.0586 - val_loss: 11545.1279\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 7459.7109 - val_loss: 14102.7021\n",
       "Epoch 9/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 6112.1475 - val_loss: 11010.6064\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 7374.8794 - val_loss: 14117.9922\n",
       "Epoch 10/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 5768.0122 - val_loss: 9602.6592\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 7295.9316 - val_loss: 14247.2041\n",
       "Epoch 11/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 5504.0273 - val_loss: 9062.5859\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 7244.8994 - val_loss: 14354.1943\n",
       "Epoch 12/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 5327.3496 - val_loss: 9076.3984\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 7208.0059 - val_loss: 14450.8516\n",
       "Epoch 13/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 5218.1821 - val_loss: 8993.1377\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 7181.9995 - val_loss: 14516.5498\n",
       "Epoch 14/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 5143.8623 - val_loss: 8975.2549\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 7158.6899 - val_loss: 14582.9268\n",
       "Epoch 15/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 5092.8081 - val_loss: 8890.0098\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 7138.8018 - val_loss: 14676.1064\n",
       "Epoch 16/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 5051.8838 - val_loss: 8866.1846\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 7126.3467 - val_loss: 14734.3887\n",
       "Epoch 17/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 5018.8052 - val_loss: 8838.4463\n"
+      "29/29 [==============================] - 0s 2ms/step - loss: 7114.9067 - val_loss: 14805.4893\n"
      ]
     }
    ],
@@ -308,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "e3affb87",
    "metadata": {},
    "outputs": [],
@@ -319,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "d0d41640",
    "metadata": {},
    "outputs": [],
@@ -331,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "96ae1a3f",
    "metadata": {},
    "outputs": [
@@ -339,9 +320,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train_loss: 8556.400390625\n",
-      "valid_loss: 6690.46875\n",
-      "test_loss: 10272.447265625\n"
+      "train_loss: 7508.27001953125\n",
+      "valid_loss: 13330.0322265625\n",
+      "test_loss: 13318.1591796875\n"
      ]
     }
    ],
